@@ -51,6 +51,8 @@ import org.jamwiki.utils.WikiLogger;
         if (inTargetSection && this.sectionDepth >= level) {
             inTargetSection = false;
         } else if (this.targetSection == this.section) {
+            WikiHeadingTag parserTag = new WikiHeadingTag();
+            this.parseToken(headingText, parserTag);
             inTargetSection = true;
             this.sectionDepth = level;
             if (this.mode == JFlexParser.MODE_SPLICE) return this.replacementText;
